--- a/pages/maillage.org
+++ b/pages/maillage.org
@@ -2,4 +2,4 @@
 
 ** Un nombre d'éléments = 125000 a un temps de calcul important pour mon PC.
 ** Un nombre d'éléments = 17000 suffit pour étudier le sillage en aval d'un cylindre.
-** Raffiner le maillage ne changerait pas le temps
+** Pour comparaison un cas
