--- a/pages/cours_de_turbulence.org
+++ b/pages/cours_de_turbulence.org
@@ -23,4 +23,5 @@ R e =U∞D/ν
 ***** Des observations expérimentales ont été représentées dans le cours, j'essaie de faire des calculs numériques dans [[CFD pratique]] pour retrouver les résultats.
 ***** détachement tourbillonnaire (vortex shedding)
 ****** it takes place when a fluid flows past a bluff body (opposed to streamlined body)
+****** it is related to
 ***** allées de tourbillons de von Karman (vortex street)
